# Mutltiple-Particle-Walk

./: .coveragerc  .gitignore  Example.py  README.md  multiple_particle_walk.py  pyproject.toml  requirements.txt
src/: multiple_particle_walk.py
tests/: conftest.py  test_accuracy.py  test_unit.py
