[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiple-particle-walk"
version = "0.1.0"
description = "Multiple Particle Competition and Cooperation for semi-supervised classification"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Raul M. Souza"}
]
keywords = ["machine-learning", "semi-supervised", "classification", "graph-based"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = ["multiple_particle_walk"]
package-data = {"" = ["py.typed"]}

[tool.setuptools.package-dir]
"" = "src"
